# enb-anti-aliasing

./: .gitmodules  CMakeLists.txt  vcpkg.json
include/: PCH.h
include/ENB/: ENBSeriesAPI.h
package/SKSE/Plugins/ENBAntiAliasing/: EncodeMaskCS.hlsl  EncodeTexturesCS.hlsl
src/: FidelityFX.cpp  FidelityFX.h  Hooks.cpp  Hooks.h  Streamline.cpp  Streamline.h  Upscaling.cpp  Upscaling.h  Util.cpp  Util.h  XSEPlugin.cpp
